terms supp et ajout dans footer

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
                     <div class="title-divider"></div>
                     <p class="restaurant-tagline">Une expérience gastronomique unique</p>
                     <div class="hero-buttons">
-                        <a href="/Client/PageReservationClient" class="btn btn-primary btn-reservation">Réserver une table</a>
+                        <a href="/Client/PageReservationClient" class="btn btn-outline-light btn-menu">Réserver une table</a>
                         <a href="#menu-section" class="btn btn-outline-light btn-menu">Notre menu</a>
                     </div>
                 </div>
@@ -170,10 +170,6 @@
             <a href="/Home/Terms" class="btn-section">Lire les conditions</a>
         </div>
     </section>
-
-    <footer class="home-footer">
-        <p>&copy; 2025 L'Etoile Blanche. Tous droits réservés.</p>
-    </footer>
 
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script>
