--- a/Views/Home/Index.nl.cshtml
+++ b/Views/Home/Index.nl.cshtml
@@ -40,7 +40,7 @@
                     <div class="title-divider"></div>
                     <p class="restaurant-tagline">Een unieke gastronomische ervaring</p>
                     <div class="hero-buttons">
-                        <a href="/Client/PageReservationClient" class="btn btn-primary btn-reservation">Tafel reserveren</a>
+                        <a href="/Client/PageReservationClient" class="btn btn-outline-light btn-menu">Tafel reserveren</a>
                         <a href="#menu-section" class="btn btn-outline-light btn-menu">Ons menu</a>
                     </div>
                 </div>
